--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -12,10 +12,10 @@
 
     <!--  Main menu -->
     <string name="menu_switch">Switch box</string>
-    <string name="menu_manual">Enter manual IP</string>
-    <string name="menu_settings">Settings</string>
-    <string name="menu_bazaar_feedback">Send feedback</string>
-    <string name="menu_about">About</string>
+    <string name="menu_manual">手动输入IP</string>
+    <string name="menu_settings">设置</string>
+    <string name="menu_bazaar_feedback">反馈</string>
+    <string name="menu_about">关于</string>
 
     <!-- Settings -->
     <string name="unknown_build">未知</string>
