--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -22,7 +22,7 @@
 
     <!--  Device Finder - more devices -->
     <string name="finder_searching">正在搜索电视设备</string>
-    <string name="finder_searching_with_ssid">正在%s网络搜索可连接设备.</string>
+    <string name="finder_searching_with_ssid">正在从%s网络搜索可连接设备.</string>
     <string name="finder_wifi_waiting">等待WIFI网络</string>
     <string name="finder_add_other">添加其他设备</string>
     <string name="finder_connect">连接</string>
@@ -81,7 +81,7 @@
     <string name="voice_search_send">搜索</string>
     <string name="voice_cancel">取消</string>
     <string name="voice_dialog_label">语音命令</string>
-    <string name="sender_missing">正在连接中</string>
+    <string name="sender_missing">正在连接中...</string>
 
     <!--  Content Descriptions -->
     <string name="keyboard_hide_desc">隐藏键盘</string>
