--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -155,4 +155,5 @@
   <!-- Links -->
   <string name="tos_link">http://m.google.com/toscountry</string>
   <string name="privacy_link">http://m.google.com/static/en/privacy.html</string>
+  <string name="unsupport_voice">暂不支持语音搜索</string>
 </resources>
