--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -33,7 +33,7 @@
     <string name="finder_wait">等待</string>
     <string name="finder_no_devices">未发现附近设备</string>
     <string name="finder_no_devices_with_ssid">没有在%s网络中搜到可连接的设备</string>
-    <string name="finder_wifi_not_available">WiFi网络未激活</string>
+    <string name="finder_wifi_not_available">WiFi网络未连接</string>
     <string name="finder_recently_connected">最近已连接的设备</string>
 
     <!-- Manual IP dialog strings -->
