--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -24,7 +24,7 @@
     <string name="finder_searching">正在搜索电视设备</string>
     <string name="finder_searching_with_ssid">正在从%s网络搜索可连接设备.</string>
     <string name="finder_wifi_waiting">等待WIFI网络</string>
-    <string name="finder_add_other">添加其他设备</string>
+    <string name="finder_add_other">其他设备</string>
     <string name="finder_connect">连接</string>
     <string name="finder_cancel">取消</string>
     <string name="finder_manual">手动添加</string>
