--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -159,4 +159,7 @@
   <string name="tos_link">http://m.google.com/toscountry</string>
   <string name="privacy_link">http://m.google.com/static/en/privacy.html</string>
   <string name="unsupport_voice">暂不支持语音搜索</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
