--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -11,7 +11,7 @@
     <string name="config_page_label">Your build is:</string>
 
     <!--  Main menu -->
-    <string name="menu_switch">Switch box</string>
+    <string name="menu_switch">连接其他电视</string>
     <string name="menu_manual">手动输入IP</string>
     <string name="menu_settings">设置</string>
     <string name="menu_bazaar_feedback">反馈</string>
@@ -135,7 +135,7 @@
     <string name="keyboard_del">删除</string>
 
     <!-- About -->
-    <string name="about_title">Google TV Remote</string>
+    <string name="about_title">电视遥控器</string>
     <string name="about_button_tos">服务条款</string>
     <string name="about_button_privacy_policy">隐私政策</string>
     <string name="about_button_tutorial">操作指南</string>
