完善抽屉菜单里面的图标以及文字显示

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -17,7 +17,7 @@
     <string name="menu_bazaar_feedback">反馈</string>
     <string name="menu_about">关于</string>
 
-    <!-- Settings -->
+    <!-- settings -->
     <string name="unknown_build">未知</string>
 
     <!--  Device Finder - more devices -->
