--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
   <string name="menu_bazaar_feedback">Send feedback</string>
   <string name="menu_about">About</string>
 
-  <!-- settings -->
+  <!-- drawer_setting -->
   <string name="unknown_build">Unknown</string>
 
   <!--  Device Finder - more devices -->
