--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -163,4 +163,5 @@
     <!-- Links -->
     <string name="tos_link">http://m.google.com/toscountry</string>
     <string name="privacy_link">http://m.google.com/static/en/privacy.html</string>
+    <string name="entry_home">进入主界面</string>
 </resources>
