--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -162,4 +162,5 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="entry_home">进入主界面</string>
 </resources>
