--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -163,4 +163,10 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="entry_home">进入主界面</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="share">分享</string>
+    <string name="about">关于</string>
 </resources>
