--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -166,4 +166,5 @@
     <string name="entry_home">进入主界面</string>
     <string name="share">分享</string>
     <string name="about">关于</string>
+    <string name="version">版本</string>
 </resources>
