--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -169,4 +169,5 @@
     <string name="action_settings">Settings</string>
     <string name="share">分享</string>
     <string name="about">关于</string>
+    <string name="version">版本</string>
 </resources>
