--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -198,6 +198,7 @@
     <string name="set_AutoPrintScreenOff">关闭 [同步屏幕]</string>
     <string name="exit_message">是否确定要退出?</string>
     <string name="handle">体感手柄</string>
-    <string name="connectHost_fail">连接体感游戏失败，请确认是否已打开体感游戏</string>
+    <string name="connectHost_fail">连接体感游戏失败，请确认是否已启动体感游戏</string>
     <string name="handle_prompt">温馨提示</string>
+    <string name="disconnect">连接已断开</string>
 </resources>
