--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -178,4 +178,5 @@
     <string name="connectHost_fail">连接体感游戏失败，请确认是否已打开体感游戏</string>
     <string name="handle_prompt">温馨提示</string>
     <string name="handle_prompt_content">为避免砸到花花草草\n请在使用时紧握手机</string>
+    <string name="disconnect">连接已断开</string>
 </resources>
